<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.autotest.MainActivity"
    tools:ignore="contentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/schumacher_drive_school_logo" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/welcome_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/fill_in_instruction_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/student_name_view"
            style="@style/NameEmailEditTextStyle"
            android:hint="@string/student_name"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/student_email_view"
            style="@style/NameEmailEditTextStyle"
            android:hint="@string/student_email"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/questions_instruction_text"
            android:textSize="16sp" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_1_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_1_context" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/question_01_photo" />

        <EditText
            android:id="@+id/question_1_answer"
            style="@style/AnswerEditTextStyle"
            android:hint="@string/question_1_answer"
            android:inputType="number" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_2_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_2_context" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_2_answer_1" />

            <RadioButton
                android:id="@+id/question_2_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_2_answer_2" />

            <RadioButton
                android:id="@+id/question_2_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_2_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_3_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_3_context" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_3_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_3_answer_1" />

            <RadioButton
                android:id="@+id/question_3_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_3_answer_2" />

            <RadioButton
                android:id="@+id/question_3_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_3_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_4_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_4_context" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/question_04_photo" />

        <EditText
            android:id="@+id/question_4_answer"
            style="@style/AnswerEditTextStyle"
            android:hint="@string/question_4_answer"
            android:inputType="number" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_5_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_5_context" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_5_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_5_answer_1" />

            <RadioButton
                android:id="@+id/question_5_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_5_answer_2" />

            <RadioButton
                android:id="@+id/question_5_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_5_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_6_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_6_context" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/question_09_photo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_6_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_6_answer_1" />

            <RadioButton
                android:id="@+id/question_6_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_6_answer_2" />

            <RadioButton
                android:id="@+id/question_6_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_6_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_7_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_7_context" />

        <CheckBox
            android:id="@+id/question_7_answer_1"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_7_answer_1" />

        <CheckBox
            android:id="@+id/question_7_answer_2"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_7_answer_2" />

        <CheckBox
            android:id="@+id/question_7_answer_3"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_7_answer_3" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_8_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_8_context" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/question_16_photo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_8_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_8_answer_1" />

            <RadioButton
                android:id="@+id/question_8_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_8_answer_2" />

            <RadioButton
                android:id="@+id/question_8_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_8_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_9_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_9_context" />

        <CheckBox
            android:id="@+id/question_9_answer_1"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_9_answer_1" />

        <CheckBox
            android:id="@+id/question_9_answer_2"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_9_answer_2" />

        <CheckBox
            android:id="@+id/question_9_answer_3"
            style="@style/CheckBoxButtonTextStyle"
            android:text="@string/question_9_answer_3" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_10_text" />

        <TextView
            style="@style/QuestionContextStyle"
            android:text="@string/question_10_context" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/question_17_photo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_10_answer_1"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_10_answer_1" />

            <RadioButton
                android:id="@+id/question_10_answer_2"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_10_answer_2" />

            <RadioButton
                android:id="@+id/question_10_answer_3"
                style="@style/RadioButtonTextStyle"
                android:text="@string/question_10_answer_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/results_text"
            style="@style/ResultsTextStyle"
            android:text="@string/results_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:onClick="checkAnswer"
            android:text="@string/check_answer_button_text" />

        <Button
            android:id="@+id/send_results_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:onClick="sendResults"
            android:text="@string/send_results" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>