<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/QuestionTextStyle"
        android:text="@string/question_7_text" />

    <TextView
        style="@style/QuestionContextStyle"
        android:text="@string/question_7_context" />

    <CheckBox
        android:id="@+id/question_7_answer_1"
        style="@style/CheckBoxButtonTextStyle"
        android:text="@string/question_7_answer_1" />

    <CheckBox
        android:id="@+id/question_7_answer_2"
        style="@style/CheckBoxButtonTextStyle"
        android:text="@string/question_7_answer_2" />

    <CheckBox
        android:id="@+id/question_7_answer_3"
        style="@style/CheckBoxButtonTextStyle"
        android:text="@string/question_7_answer_3" />
</merge>